# tari_vault

./: CLAUDE.md  Cargo.toml  Makefile  README.md  log4rs.yaml  openrpc.json
.github/workflows/: ci.yml
docs/: llm-context.md
docs/api/: json-rpc-reference.md
docs/architecture/: data-flows.md  overview.md  security-model.md
docs/development/: contributing.md
docs/guides/: configuration.md  getting-started.md  library-integration-axum.md  library-integration.md
docs/improvements/: README.md  imp-001-tls.md  imp-002-zeroize-claim-id-string.md  imp-003-sqlite-backend.md  imp-004-atomic-delete-proof.md  imp-005-ttl-zero-edge-case.md  imp-006-expiry-delete-logging.md  imp-007-dotenvy.md  imp-008-fs2-replacement.md  imp-009-tracing.md  imp-010-auth-rejection-test.md  imp-011-discover-integration-test.md  imp-012-delete-expired-proof-test.md  imp-013-request-size-cap.md  imp-014-expires-in-secs-cast.md  imp-015-rate-limiting.md
scripts/: check_openrpc.sh
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
src/domain/: claim_id.rs  mod.rs  proof.rs  record.rs
src/rpc/: api.rs  discovery.rs  mod.rs  server.rs
src/storage/: backend.rs  local_file.rs  mod.rs  sqlite.rs
src/vault/: cleanup.rs  mod.rs  proof_vault.rs
tests/: rpc_integration.rs
