[package]
name = "tari_vault"
version = "0.1.0"
edition = "2024"

[lib]
name = "tari_vault"
path = "src/lib.rs"

[[bin]]
name = "tari_vault"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0.102"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15.21", features = ["toml", "yaml"] }
dirs-next = "2.0"
dotenvy = "0.15"
fd-lock = "4.0.4"
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
http = "1"
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
tower = "0.5"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
jsonrpsee = { version = "0.26", features = ["http-client"] }
rcgen = "0.13"
tokio-test = "0.4"
